# CHANGELOG
# ---
# * Add Verifi gateway [Paul Hepworth]
#
# * Add a PayflowResponse object with a profile_id accessor method.  Return the correct authorization number on recurring actions [cody]
#
# * Add support for an initial transaction with recurring payments [findchris, cody]
#
# * Add support for email receipts to recurring Payflow Payments [Rick Olson]
#
# * Ensure the ButtonSource isn't too long [cody]
#
# * Add ButtonSource to Paypal and PaypalExpress gateways [cody]
#
# * Rename application to application_id and place it on Base, so it can be set once and forgotten about [cody]
#
# * Add ButtonSource field to PayflowExpress gateway [cody]
#
# * Add a field for the bn to the PayPal helper [cody]
#
# * Add remote secure pay test and correctly define test? [cody]
#
# * Undefine unsupported methods from SecurePay [cody]
#
# * Enhance the TransFirst error message for declined transactions [cody]
#
# * Add initial support for TransFirst gateway [cody]
#
# * Deprecate certification_id in Payflow gateways [cody]
#
# * Work around required PayPal state fields for countries that don't require states [cody]
#
# * Add metadata to SecurePay gateway [cody]
#
# * Add initial support for the SecurePay gateway using the Authorize.net translator [cody]
#
# * Add the homepage_url and display_name accessors to each gateway [cody]
#
# * Remove Money dependency from main gateways. Cleanup tests.  Add supported_countries class accessor which returns an array of 2 digit iso country codes for which countries the gateway supports accounts in [cody]
#
# * Add American Express card to Psigate [cody]
#
# * Send N/A to PayPal in the PayPal Helper when we don't know the UK county [cody]
#
# * Actually pass the amount of the capture through to Payflow [cody]
#
# * Update ExactGateway test and test mode [cody]
#
# * Remove unused method in PslCardGateway [cody]
#
# * Add updated credit card tests [cody]
#
# * Update and test PslCardGateway [cody]
#
# * Add Laser card type [cody]
#